--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Compiled class file
+Compiled class file
 *.class
 
 # Log file
@@ -24,3 +24,20 @@ hs_err_pid*
 
 # ds store
 .DS_Store
+
+# idea
+*.idea
+.idea
+*/idea
+
+# build
+.build
+*/build
+
+# .gradle
+*.gradle
+/gradle
+
+#out
+/out
+*.out
