--- a/practice/build.gradle
+++ b/practice/build.gradle
@@ -37,6 +37,8 @@ dependencies {
 // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.7.1'
 
+    // Coroutine
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.0-RC'
 }
 
 tasks.named('test') {
